# ctcfd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  time_op.py
application/: CMakeLists.txt  step1.cpp
plot_scripts/: plot_2d.py
scripts/: plot_2d.py  plot_flow.py  plot_json.py  track_iterations.py
steps/: CMakeLists.txt
steps/common/: sor_omega.py
steps/step1/: CMakeLists.txt  step1.cpp  step1_params.h.in
steps/step10/: CMakeLists.txt  step10.cpp  step10_params.h.in  step10_sor_omega.py
steps/step11/: CMakeLists.txt  poisson.h  pressure_eq.h  step11.cpp  step11_params.h.in  velocity_step.h
steps/step2/: CMakeLists.txt  step2.cpp  step2_params.h.in
steps/step3/: CMakeLists.txt  step3.cpp
steps/step4/: CMakeLists.txt  step4.cpp  step4_analytical.py  step4_params.h.in
steps/step5/: CMakeLists.txt  step5.cpp  step5_params.h.in
steps/step6/: CMakeLists.txt  step6.cpp  step6_params.h.in
steps/step7/: CMakeLists.txt  step7.cpp  step7_params.h.in
steps/step8/: CMakeLists.txt  step8.cpp
steps/step9/: CMakeLists.txt  l1_norm.h  step9.cpp  step9_params.h.in  step9_sor_omega.py
util/tests/: CMakeLists.txt  diff.test.cpp  for_i.test.cpp  is_same.test.cpp  minus.test.cpp  ones.test.cpp  range.test.cpp
util/util/: conditional.h  ct_assert.h  debug.h  diff.h  for_i.h  identity.h  is_same.h  minus.h  number.h  ones.h  point2d.h  range.h  typelist.h  valuelist.h  zeros.h
